--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="./recipes/sisig.html">Sisig</a></li>
         <li><a href="./recipes/pakbet.html">Pakbet</a></li>
-        <li></li>
+        <li><a href="./recipes/adobo.html">Adobo</a></li>
     </ul>
 </body>
 </html>
